--- a/index.html
+++ b/index.html
@@ -4,10 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            display: grid;
+            grid-template-columns:repeat(auto-fill,minmax(350px,1fr));
+            gap: 10px;
+            padding: 10px;
+            
+
+        }
+        .text{
+            text-align: center;
+            font-weight: bold;
+        }
+        .image{
+            width:100%;
+            height: 150px;
+            object-fit:contain;
+            display: block;
+        }
+        .item{
+            padding: 10px;
+            border: 1px solid gray;
+            overflow: hidden;
+               position: relative;
+
+        }
+        .item>.image:hover{
+            transform: scale(1.2);
+            transition: 0.6s ease;
+
+        }
+    .rating{
+    position: absolute;
+    top: 10px;
+    right: 30px;
     
+
+
+     }
+     .description{
+        white-space: nowrap;
+        overflow:hidden ;
+        text-overflow: ellipsis;
+     }
+     .loader {
+            width: 120px;
+            height: 20px;
+            -webkit-mask: linear-gradient(90deg, #000 70%, #0000 0) 0/20%;
+            background:
+                linear-gradient(#000 0 0) 0/0% no-repeat #ddd;
+            animation: l4 2s infinite steps(6);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        @keyframes l4 {
+            100% {
+                background-size: 120%
+            }
+        }
+    </style>
 </head>
 <body>
-
-    <script src="./taskonconditions.js"></script>
+    <div class="loader" id="loader"></div>
+    <script src="index.js"></script>
 </body>
 </html>
