--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             
 
         }
+        body{
+            position: relative;
+            min-height: 100vh;
+            margin: 0;
+        }
         .text{
             text-align: center;
             font-weight: bold;
