--- a/index1.html
+++ b/index1.html
@@ -124,12 +124,13 @@
 </head>
 <body>
     <div class="input" >
+        <input type="text" id ="dsinput" placeholder="id" disabled>
         <input type="text" id="title" placeholder="title">
         <input type="text" id="price" placeholder="price">
         <input type="text" id="description" placeholder="description">
         <div class="btn-container">
             <button id="btnloader" class="btnloader">
-                ADD Me
+                ADD or Update
                 <div class="loader" id="loader">
 
                 </div>
