--- a/form.html
+++ b/form.html
@@ -27,6 +27,7 @@
         <p class="toggle" >Don't have an account? Register</p>
         <p class="forgot-password" onclick="forgotPassword()">Forgot Password?</p> 
         <p id="error-message" style="color: red;"></p>
+        <button id="googleSignIn" class="btn">Sign in with Google</button>
     </div>
 
 <script src="form.js" defer type="module"></script>
