--- a/form.html
+++ b/form.html
@@ -4,7 +4,149 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fire-base AUTH</title>
-    <link rel="stylesheet" href="form.css">
+    <style>
+        /* Reset and Global Styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Full Page Styling */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(-45deg, #4facfe, #00f2fe, #38ef7d, #ff9966);
+    background-size: 400% 400%;
+    animation: backgroundAnimation 10s ease infinite;
+}
+
+/* Animated Background */
+@keyframes backgroundAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+/* Form Container */
+.container {
+    width: 360px;
+    padding: 25px;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    animation: fadeIn 1.2s ease-in-out;
+}
+
+/* Form Entrance Animation */
+@keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(-20px); }
+    100% { opacity: 1; transform: translateY(0); }
+}
+
+/* Form Title */
+h2 {
+    margin-bottom: 15px;
+    font-size: 24px;
+    color: #333;
+}
+
+/* Input Fields */
+.input-group {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.input-group label {
+    font-weight: bold;
+    font-size: 14px;
+    color: #555;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    transition: 0.3s ease;
+    font-size: 16px;
+}
+
+/* Input Field Focus Effect */
+.input-group input:focus {
+    outline: none;
+    border-color: #4facfe;
+    box-shadow: 0 0 8px rgba(79, 172, 254, 0.5);
+}
+
+/* Buttons */
+.btn {
+    width: 100%;
+    padding: 12px;
+    background: linear-gradient(90deg, #4facfe, #00c6fb);
+    border: none;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: 0.3s ease-in-out;
+    position: relative;
+    overflow: hidden;
+}
+
+/* Button Hover Effect */
+.btn:hover {
+    background: linear-gradient(90deg, #00c6fb, #4facfe);
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 198, 251, 0.3);
+}
+
+/* Google Sign-In Button */
+#googleSignIn {
+    background: white;
+    color: #333;
+    border: 2px solid #4facfe;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+#googleSignIn:hover {
+    background: #4facfe;
+    color: white;
+}
+
+/* Toggle Text */
+.toggle {
+    margin-top: 12px;
+    color: #333;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.toggle:hover {
+    color: #00c6fb;
+}
+
+/* Forgot Password */
+.forgot-password {
+    cursor: pointer;
+    color: #888;
+    font-size: 14px;
+    margin-top: 5px;
+    transition: 0.3s;
+}
+
+.forgot-password:hover {
+    color: #ff6600;
+}
+
+    </style>
 </head>
 <body>
     <div class="container">
